# app-helper-cli

./: .dh.local.toml.example  .gitignore  DEPLOYMENT_GUIDE.md  README.md  dh.toml.example  pyproject.toml
.github/ISSUE_TEMPLATE/: ISSUE-REPORTER.yml
.github/workflows/: publish-to-pypi.yml  publish-to-testpypi.yml
dh/: cli.py  context.py
dh/commands/: auth.py  build.py  clean.py  db.py  dev.py  make.py  setup.py  validate.py
dh/utils/: commands.py  config.py  db.py  detection.py  env.py  prompts.py
docs/: supabase-setup.md
tests/: conftest.py  test_cli.py  test_context.py
tests/commands/: test_build.py  test_clean.py  test_db.py  test_dev.py  test_make.py  test_setup.py  test_validate.py
tests/utils/: test_commands.py  test_config.py  test_detection.py  test_env.py
